syntax = "proto3";

package payment.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/azoma13/computer-assembly-service/shared/proto/payment/v1;payment_v1";

service PaymentService {
  rpc PayOrder(PayOrderRequest) returns(PayOrderResponse);
}

message PayOrderRequest {
  string  order_uuid = 1;
  PaymentMethod payment_method = 2;
}

message PayOrderResponse {
  string  transaction_uuid = 1;
  google.protobuf.Timestamp created_at = 2;
}

enum PaymentMethod {
  PAYMENT_METHOD_UNDEFINED = 0;
  PAYMENT_METHOD_SASH	= 1;
  PAYMENT_METHOD_CARD = 2;
  PAYMENT_METHOD_SBP = 3;
}